--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,12 @@ jobs:
     name: Build & Deploy
     steps:
       - uses: actions/checkout@v4
+      - name: Generate wrangler.toml
+        run: |
+          rm -f wrangler.toml
+          export CUSTOM_DOMAIN="${{ secrets.CUSTOM_DOMAIN || 'libcuda.so' }}"
+          envsubst < wrangler.template.toml > wrangler.toml
+          cat wrangler.toml
       - name: Publish
         uses: cloudflare/wrangler-action@v3
         env:
